tests/snapshots/examples_fixtures/aoc__2025__aoc_day2_part1.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day2_part1.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Parameter Type Mismatch

Parameter 1 has the wrong type.

  examples/aoc/2025/aoc_day2_part1.flx:50:20
   |
50 | let range_tokens = read_file("examples/aoc/2025/aoc_day2.txt")
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
51 | |> trim
   | ^^^^^^^
52 | |> split(",")
   | ^^^^^^^^^^^^^
53 | |> filter(/t -> trim(t) != "")
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Note:
  expected parameter type: List<_>
  found parameter type: Array<String>
  the conflicting types meet at this expression

Help:
  Change parameter 1 to use `List<_>` consistently.


error[E300]: Parameter Type Mismatch

Parameter 3 has the wrong type.

  examples/aoc/2025/aoc_day2_part1.flx:57:15
   |
57 | let max_end = parsed_ranges
   |               ^^^^^^^^^^^^^
58 | |> map(/r -> range_end(r))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
59 | |> fold(0, /(acc, x) -> if x > acc { x } else { acc })
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Note:
  expected parameter type: Option<_>
  found parameter type: Int
  the conflicting types meet at this expression

Help:
  Wrap this value in `Some(...)` or return `None`.


error[E300]: Parameter Type Mismatch

Parameter 2 has the wrong type.

  examples/aoc/2025/aoc_day2_part1.flx:68:13
   |
68 | let total = invalid_candidates |> filter(in_any_range) |> sum
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |             ------------------------------------------ parameter 2 has type `Option<_>`

   |             ------------------------------------------ this type mismatch is reported here

Note:
  expected parameter type: Int
  found parameter type: Option<_>
  the conflicting types meet at this expression

Help:
  This value might be `None`. Use `match` to unwrap it before using it here.

Found 3 errors.
== stdout ==
<not executed>
